# uvs

./: .gitignore  CMakeLists.txt  Cargo.toml
lidar/: CMakeLists.txt  package.xml
lidar/include/: SensorData.hpp  deflection.hpp  math.hpp  reading.hpp  utility.hpp
lidar/src/: SensorData.cpp  deflection.cpp  main.cpp  math.cpp
reactive_controls/: CMakeLists.txt  Cargo.toml  package.xml
reactive_controls/include/: deflection.hpp  lidar.hpp  numeric_types.hpp  sonar.hpp  units.hpp
reactive_controls/src/: deflection.cpp  environment.rs  lidar.cpp  main.cpp  main.rs  messages.rs  sonar.cpp  units.cpp
reactive_controls/test/: main.cpp  test_deflection.cpp  test_lidar.cpp  test_numeric_types.cpp  test_units.cpp
rover_controls/obstacle_avoidance/: obstacle_avoidance.slx
rover_controls/sensor_fusion/: parameterVehicle.m  sensor_fusion.slx
rover_controls/waypoints/: myStopFcn2sim.m  parameterGNC.m  waypoint_navigation.slx
utils/: Cargo.toml
utils/src/: lib.rs  unit.rs
